#1904 Fix css - when text is too long

--- a/discovery-frontend/src/assets/css/polaris.v2.page.css
+++ b/discovery-frontend/src/assets/css/polaris.v2.page.css
@@ -3055,8 +3055,9 @@ em.ddp-icon-cross.type-apply:before {background-position:-12px -20px;}
 .ddp-view-drag-slide {display:inline-block;}
 .ddp-ui-drag-slide .ddp-wrap-default {display:inline-block; min-width:100%; height:100%; white-space:nowrap;}
 .ddp-ui-drag-slide .ddp-ui-default {position:relative; display:inline-block; float:left; padding:0 5px; white-space:nowrap;}
-.ddp-ui-drag-slide .ddp-ui-default span.ddp-data {color:#fff; opacity:0.8;}
-.ddp-ui-drag-slide .ddp-ui-default span.ddp-type-value {display:inline-block; padding-right:7px; margin-right:7px; border-right:1px solid rgba(255,255,255,0.5); color:rgba(255,255,255,0.8);}
+.ddp-ui-drag-slide .ddp-ui-default span.ddp-data {display:block; color:#fff; opacity:0.8; overflow:hidden; white-space:nowrap; text-overflow:ellipsis;}
+.ddp-ui-drag-slide .ddp-ui-default .ddp-data-txt {display:block; overflow:hidden;}
+.ddp-ui-drag-slide .ddp-ui-default span.ddp-type-value {display:inline-block; float:left; padding-right:7px; margin-right:7px; border-right:1px solid rgba(255,255,255,0.5); color:rgba(255,255,255,0.8);}
 .ddp-wrap-shelf.ddp-mapview .ddp-ui-drag-slide-in {overflow:hidden;}
 .ddp-wrap-shelf.ddp-mapview .ddp-ui-drag-slide {padding:0;overflow:hidden;}
 .ddp-wrap-shelf.ddp-mapview .ddp-ui-drag-slide.ddp-slide {padding-left:34px;}
@@ -3072,9 +3073,9 @@ em.ddp-icon-cross.type-apply:before {background-position:-12px -20px;}
 .ddp-ui-drag-slide .ddp-slide-control .ddp-btn-plus {background-position:-28px top;}
 
 .ddp-wrap-content-graph .ddp-ui-default span.ddp-data {color:#fff; opacity:0.8;}
-
-.ddp-ui-drag-slide .ddp-ui-default a.ddp-ui-dimension-wrap {display:inline-block; position:relative; margin:5px 0 5px 0; padding:7px 9px 4px 9px; height:27px; border-radius:3px; background-color:#5492e4; box-shadow:1px 1px 1px #efeeee; box-sizing:Border-box;}
-.ddp-ui-drag-slide .ddp-ui-default a.ddp-ui-measure-wrap {display:inline-block; position:relative; margin:5px 0 5px 0; padding:7px 9px 4px 9px;  height:27px;  border-radius:3px; background-color:#55c08b; box-shadow:1px 1px 1px #efeeee; box-sizing:border-box;}
+.ddp-ui-drag-slide .ddp-ui-default a .ddp-data-txt [class*="ddp-icon-"] {float:left;}
+.ddp-ui-drag-slide .ddp-ui-default a.ddp-ui-dimension-wrap {display:inline-block; position:relative; margin:5px 0 5px 0; padding:7px 9px 4px 9px; max-width:200px; height:27px; border-radius:3px; background-color:#5492e4; box-shadow:1px 1px 1px #efeeee; box-sizing:border-box;}
+.ddp-ui-drag-slide .ddp-ui-default a.ddp-ui-measure-wrap {display:inline-block; position:relative; margin:5px 0 5px 0; padding:7px 9px 4px 9px; max-width:200px; height:27px;  border-radius:3px; background-color:#55c08b; box-shadow:1px 1px 1px #efeeee; box-sizing:border-box;}
 
 .ddp-ui-drag-slide .ddp-box-network .ddp-ui-default a.ddp-ui-dimension-wrap  {margin-top:0px; margin-bottom:0;}
 .ddp-ui-drag-slide .ddp-box-network .ddp-ui-default a.ddp-ui-measure-wrap  {margin-top:0px; margin-bottom:0;}
